# discord-service-gateway

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check-openspec.yml  check-pr-issue.yml  check-todo.yml  deploy.yml  python-checks.yaml
openspec/changes/add-dsg-n8n-health/: design.md  tasks.md
openspec/changes/add-ping-command/: tasks.md
openspec/changes/add-tasks-list-command/: design.md  proposal.md  tasks.md
openspec/changes/enhance-qa-ci/: design.md  tasks.md
openspec/changes/fix-cloud-run-env-vars/: tasks.md
openspec/changes/improve-complexity-and-refactor-interactions/: proposal.md  tasks.md
openspec/changes/improve-dev-debugging/: design.md  tasks.md
openspec/changes/move-scripts-to-src-cli/: tasks.md
openspec/changes/remove-noqa-comments/: tasks.md
openspec/changes/setup-cloud-run-deployment-and-proxy/: tasks.md
openspec/changes/setup-discord-interaction-endpoint/: tasks.md
openspec/changes/setup-docker-development-environment/: tasks.md
openspec/changes/setup-github-actions-ci/: design.md  tasks.md
openspec/changes/strengthen-testing-and-linting/: tasks.md
openspec/changes/typed-command-routing/: tasks.md
openspec/changes/upgrade-to-python-3-14/: tasks.md
openspec/specs/ci-cd-pipeline/: spec.md
openspec/specs/cli-tooling/: spec.md
openspec/specs/cloud-run-proxy/: spec.md
openspec/specs/continuous-integration/: spec.md
openspec/specs/docker-build-verification/: spec.md
openspec/specs/docker-development-environment/: spec.md
openspec/specs/dsg-command-infrastructure/: spec.md
openspec/specs/interaction-endpoint/: spec.md
openspec/specs/local-dev-automation/: spec.md
scripts/: __init__.py  dev.sh  register_commands.py  setup_gcp.sh  toggle_mode.py
src/: __init__.py  main.py
src/api/: __init__.py  deps.py  handlers.py  models.py  routes.py
src/cli/: __init__.py  register_commands.py  toggle_mode.py
src/core/: __init__.py  config.py  constants.py  exceptions.py
src/services/: n8n.py
tests/: __init__.py  conftest.py  test_cli.py  test_handlers.py  test_interactions.py  test_main.py  test_models.py  test_n8n_service.py
tmp/: discord_interaction_endpoint_architecture.md
(+65 files in other folders)
