[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "discord-service-gateway"
version = "0.1.0"
description = "Discord interaction endpoint for controlling n8n and other services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "pynacl>=1.5.0",
    "uvicorn>=0.30.6",
]

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]

[project.scripts]
serve = "src.main:main"
register-commands = "src.cli.register_commands:register_commands"
toggle-mode = "src.cli.toggle_mode:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "C4", "DTZ", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF", "D", "ANN", "PT", "TRY", "TID"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
